--- a/TensorFlow/playbooks/cuda_optional_installation/play.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/play.yaml
@@ -18,6 +18,9 @@
     # Install cuda toolkit?
     install_cuda_toolkit: '{{ install_toolkit | default("yes") }}'
 
+    # Use which type of GPU?
+    gpu_device: '{{ device_vendor | default("nvidia") }}'
+
   ################################################################################################
   #        The following roles will be executed and will call other roles in the process         #
   ################################################################################################
