--- a/TensorFlow/Dockerfiles/custom/Dockerfile.rhel8_cuda10.1_with_toolkit
+++ b/TensorFlow/Dockerfiles/custom/Dockerfile.rhel8_cuda10.1_with_toolkit
@@ -45,3 +45,8 @@ RUN dnf clean all && \
                    libcublas-devel \
                    cuda-toolkit-${CUDA_PACKAGE_VERSION} && \
     rm -rf /var/cache/dnf/*
+
+# Disable CUDA and RHEL 8 repos (for now). User can re-enable them later if desired.
+RUN dnf config-manager --set-disabled rhel8-Latest.repo && \
+    dnf config-manager --set-disabled rhel8-Appstream-Latest.repo && \
+    dnf config-manager --set-disabled cuda.repo
