Was disabling repos the wrong way

--- a/TensorFlow/Dockerfiles/custom/Dockerfile.rhel8_cuda10.1
+++ b/TensorFlow/Dockerfiles/custom/Dockerfile.rhel8_cuda10.1
@@ -43,5 +43,5 @@ RUN dnf clean all && \
     rm -rf /var/cache/dnf/*
 
 # Disable CUDA and RHEL 8 repos (for now). User can re-enable them later if desired.
-RUN dnf config-manager --set-disabled rhel8-Latest.repo && \
-    dnf config-manager --set-disabled cuda.repo
+RUN dnf config-manager --disablerepo RHEL8-Latest && \
+    dnf config-manager --disablerepo cuda
