Use a different image name with a different tag

--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
@@ -1,4 +1,4 @@
-FROM image-registry.openshift-image-registry.svc:5000/openshift-image-registry/cuda_rhel8
+FROM image-registry.openshift-image-registry.svc:5000/openshift-image-registry/cuda:rhel8-with-toolkit
 MAINTAINER Courtney Pacheco <cpacheco@redhat.com>
 ENV LANG=en_US.utf8
 USER root
