TensorFlow configure script looks for 'deviceQuery' binary in a path that does not exist. Creating that path so TensorFlow can find it.

--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
@@ -102,12 +102,15 @@ RUN ln -s /usr/bin/python3 /usr/bin/python
 RUN echo "remote_tmp = ${TOPDIR}/.ansible/tmp" >> ${FFTW_INSTALLATION}/ansible.cfg && \
     echo "remote_tmp = ${TOPDIR}/.ansible/tmp" >> ${TENSORFLOW_INSTALLATION}/ansible.cfg
 
+# Set deviceQuery path
+ENV DEMO_SUITE=/usr/local/cuda/extras/demo_suite
+RUN if [[ ! -f ${DEMO_SUITE} ]]; then mkdir -p ${DEMO_SUITE}; fi && \
+    ln -s /usr/local/cuda/samples/1_Utilities/deviceQuery ${DEMO_SUITE}/deviceQuery
+
 # Set user to 'default'
 USER default
 
-# Set home dir
-ENV HOME=${TOPDIR}
-
+# Set work directory to 'HOME'
 WORKDIR ${HOME}
 
 CMD ["/usr/libexec/s2i/usage"]
