--- a/TensorFlow/Dockerfiles/custom/rhel8/cuda/Dockerfile.rhel8_cuda10.1
+++ b/TensorFlow/Dockerfiles/custom/rhel8/cuda/Dockerfile.rhel8_cuda10.1
@@ -21,7 +21,7 @@ ENV LD_LIBRARY_PATH=/usr/local/nvidia/lib:/usr/local/nvidia/lib64
 COPY repos/rhel8-Latest.repo /etc/yum.repos.d/rhel8-Latest.repo
 
 # Copy 'cuda repo'
-COPY repos/cuda.repo /etc/yum.repos.d/cuda.repo
+COPY repos/rhel8-cuda.repo /etc/yum.repos.d/cuda.repo
 
 # Install CUDA packages
 RUN dnf clean all && \
