--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel7_cuda10
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel7_cuda10
@@ -1,4 +1,4 @@
-FROM registry.access.redhat.com/rhscl/s2i-core-rhel7:1-66
+FROM image-registry.openshift-image-registry.svc:5000/openshift-image-registry/cuda:rhel7-complete
 MAINTAINER Courtney Pacheco <cpacheco@redhat.com>
 ENV LANG=en_US.utf8
 USER root
@@ -20,72 +20,101 @@ COPY TensorFlow/.s2i_fftw/bin/ /usr/libexec/s2i
 # Put on port 8080
 EXPOSE 8080
 
+# Set timeout for yum (in seconds) to prevent Curl timeout errors w/ yum
+ENV YUM_TIMEOUT=300
+RUN sed -i "/[main]/a timeout=${YUM_TIMEOUT}" /etc/yum/yum.conf
+
+# Set top directory
+ENV TOPDIR=${HOME}
+
+# Set playbook paths
+ENV FFTW_PREREQS_PLAYBOOK=${TOPDIR}/playbooks/fftw_package_installation
+ENV TF_PREREQS_PLAYBOOK=${TOPDIR}/playbooks/tensorflow_package_installation
+ENV FFTW_INSTALLATION=${TOPDIR}/playbooks/FFTW_installation
+ENV TENSORFLOW_INSTALLATION=${TOPDIR}/playbooks/TensorFlow_installation
+ENV TENSORFLOW_BENCHMARKS=${TOPDIR}/playbooks/TensorFlow_benchmarks
+ENV NCCL_INSTALLATION=${TOPDIR}/playbooks/nccl_installation
+ENV CUDNN_INSTALLATION=${TOPDIR}/playbooks/cudnn_installation
+
+# Create folders for playbooks and folder for playbooks cache
+RUN mkdir -p ${FFTW_PREREQS_PLAYBOOK} && \
+    mkdir -p ${TF_PREREQS_PLAYBOOK} && \
+    mkdir -p ${FFTW_INSTALLATION} && \
+    mkdir -p ${TENSORFLOW_INSTALLATION} && \
+    mkdir -p ${TENSORFLOW_BENCHMARKS} && \
+    mkdir -p ${NCCL_INSTALLATION} && \
+    mkdir -p ${CUDNN_INSTALLATION} && \
+    mkdir -p ${TOPDIR}/.cache
+
+# Copy playbooks and scripts
+COPY helper_scripts/Ansible/install_ansible_from_source.sh ${TOPDIR}
+COPY FFTW/playbooks/package_installation ${FFTW_PREREQS_PLAYBOOK}
+COPY TensorFlow/playbooks/package_installation ${TF_PREREQS_PLAYBOOK}
+COPY FFTW/playbooks/FFTW_installation ${FFTW_INSTALLATION}
+COPY TensorFlow/playbooks/TensorFlow_installation ${TENSORFLOW_INSTALLATION}
+COPY TensorFlow/playbooks/TensorFlow_benchmarks ${TENSORFLOW_BENCHMARKS}
+COPY TensorFlow/playbooks/nccl_installation ${NCCL_INSTALLATION}
+COPY TensorFlow/playbooks/cudnn_installation ${CUDNN_INSTALLATION}
+
+# Put on port 8080
+EXPOSE 8080
+
+# Set up symbolic linking for Python so that TensorFlow build doesn't fail when s2i script is called
+RUN ln -s /usr/bin/python3 /usr/bin/python
+
 # Install Ansible
 COPY helper_scripts/Ansible/install_ansible_from_source.sh ${HOME}
 RUN sh install_ansible_from_source.sh ${ANSIBLE_GIT_VERSION} && \
     rm install_ansible_from_source.sh
 
-# Install FFTW prerequisites via Ansible
-ENV FFTW_PREREQS_PLAYBOOK=${HOME}/fftw_package_installation
-RUN mkdir -p ${FFTW_PREREQS_PLAYBOOK}
-COPY FFTW/playbooks/package_installation ${FFTW_PREREQS_PLAYBOOK}
+# Disable specific repos *if* they're enabled
+RUN if [[ -f /etc/yum.repos.d/rhel7-Latest.repo ]]; then yum-config-manager --disablerepo rhel7-Latest; fi && \
+    if [[ -f /etc/yum.repos.d/rhel8-Appstream-Latest.repo ]]; then yum-config-manager --disablerepo rhel8-Server-Optional; fi && \
+    if [[ -f /etc/yum.repos.d/cuda.repo ]]; then yum-config-manager --disablerepo cuda; fi && \
+    if [[ -f /etc/yum.repos.d/epel.repo ]]; then yum-config-manager --disablerepo epel; fi
+
+# Install Ansible
+RUN cd ${TOPDIR} && \
+    sh install_ansible_from_source.sh ${ANSIBLE_GIT_VERSION} && \
+    rm install_ansible_from_source.sh
+
+# Install FFTW + TensorFlow prerequisites via Ansible and pip3
 RUN cd ${FFTW_PREREQS_PLAYBOOK} && \
-    ansible-playbook -i hosts play.yaml && \
-    cd .. && \
-    rm -rf ${FFTW_PREREQS_PLAYBOOK}
+    ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '7', update_dnf: 'no'}" && \
+    cd ${TF_PREREQS_PLAYBOOK} && \
+    ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '7', use_s2i_ubi: 'yes'}" && \
+    pip3 install awscli
 
-# Install TensorFlow prerequisites via Ansible
-ENV TF_PREREQS_PLAYBOOK=${HOME}/tensorflow_package_installation
-RUN mkdir -p ${TF_PREREQS_PLAYBOOK}
-COPY TensorFlow/playbooks/package_installation ${TF_PREREQS_PLAYBOOK}
-RUN cd ${TF_PREREQS_PLAYBOOK} && \
-    ansible-playbook -i hosts play.yaml --extra-vars="{use_s2i: 'yes', use_gpu: 'yes', cuda_rpm: 'https://developer.download.nvidia.com/compute/cuda/repos/rhel7/x86_64/cuda-repo-rhel7-10.0.130-1.x86_64.rpm'}" && \
-    cd .. && \
-    rm -rf ${TF_PREREQS_PLAYBOOK}
-
-# Copy FFTW installation playbook and create dir for installation
-ENV FFTW_INSTALLATION=${HOME}/playbooks/FFTW_installation
-RUN mkdir -p ${FFTW_INSTALLATION}
-COPY FFTW/playbooks/FFTW_installation ${FFTW_INSTALLATION}
-
-# Copy TensorFlow installation playbook and create dirs for installation
-ENV TENSORFLOW_INSTALLATION=${HOME}/playbooks/TensorFlow_installation
-RUN mkdir -p ${TENSORFLOW_INSTALLATION} ${HOME}/.cache
-COPY TensorFlow/playbooks/TensorFlow_installation ${TENSORFLOW_INSTALLATION}
-
-# Create a folder for the benchmark tests and copy the tests to the new folder
-ENV TENSORFLOW_BENCHMARKS=${HOME}/playbooks/TensorFlow_benchmarks
-RUN mkdir -p ${TENSORFLOW_BENCHMARKS}
-COPY TensorFlow/playbooks/TensorFlow_benchmarks ${TENSORFLOW_BENCHMARKS}
-
-# Create a folder for NCCL installation and copy the installation playbook to the folder
-ENV NCCL_INSTALLATION=${HOME}/playbooks/nccl_installation
-RUN mkdir -p ${NCCL_INSTALLATION}
-COPY TensorFlow/playbooks/nccl_installation ${NCCL_INSTALLATION}
-
-# Create a folder for cuDNN installation and copy the installation playbook to the folder
-ENV CUDNN_INSTALLATION=${HOME}/playbooks/cudnn_installation
-RUN mkdir -p ${CUDNN_INSTALLATION}
-COPY TensorFlow/playbooks/cudnn_installation ${CUDNN_INSTALLATION}
-
-# Give user permissions to modify the 'macros' file + other files to run tests
+# Create and give user permissions to modify certain directories that are required to run the Ansible
+# playbooks that are being pulled into this Dockerfile. Also allow /usr/local/cuda to be writable and
+# allow /.aws to be writeable in case the user wants to use an AWS s3 bucket to download NCCL + cuDNN
 RUN chmod 777 /usr/libexec/s2i/run && \
     chmod g=u /etc/passwd /etc/group && \
-    mkdir -p /opt/app-root/src/.ansible/tmp && \
-    chmod 777 /opt/app-root/src/.ansible/tmp && \
-    chmod 777 /opt/app-root/src/.ansible && \
-    chmod 777 /opt/app-root/src/.cache && \
-    chmod 777 /opt/app-root/src && \
-    chmod 777 /opt/app-root
+    mkdir -p ${TOPDIR}/.ansible/tmp && \
+    chmod -R 777 ${TOPDIR}/.ansible && \
+    mkdir -p ${TOPDIR}/.cache && \
+    chmod -R 777 ${TOPDIR}/.cache && \
+    chmod 777 ${TOPDIR} && \
+    touch ${TOPDIR}/.gitconfig && \
+    chmod 777 ${TOPDIR}/.gitconfig && \
+    mkdir ${TOPDIR}/.aws && \
+    mkdir -p ${TOPDIR}/.cache/bazel && \
+    chmod -R 777 ${TOPDIR}/.cache/bazel && \
+    chmod -R 777 ${TOPDIR}/.aws && \
+    chmod -R 777 /usr/local/cuda
+
+# Set up symbolic linking for Python so that TensorFlow build doesn't fail when s2i script is called
+RUN ln -s /usr/bin/python3 /usr/bin/python
 
 # Set Ansible remote tmp
-RUN echo "remote_tmp = ${HOME}/.ansible/tmp" >> ${FFTW_INSTALLATION}/ansible.cfg && \
-    echo "remote_tmp = ${HOME}/.ansible/tmp" >> ${TENSORFLOW_INSTALLATION}/ansible.cfg && \
-    echo "rempte_tmp = ${HOME}/.ansible/tmp" >> ${NCCL_INSTALLATION}/ansible.cfg
+RUN echo "remote_tmp = ${TOPDIR}/.ansible/tmp" >> ${FFTW_INSTALLATION}/ansible.cfg && \
+    echo "remote_tmp = ${TOPDIR}/.ansible/tmp" >> ${TENSORFLOW_INSTALLATION}/ansible.cfg && \
+    echo "remote_tmp = ${TOPDIR}/.ansible/tmp" >> ${TENSORFLOW_BENCHMARKS}/ansible.cfg
 
-# This default user is created in the openshift/base-centos7 image
-USER 1001
+# Set deviceQuery path
+ENV DEMO_SUITE=/usr/local/cuda/extras/demo_suite
+RUN if [[ ! -f ${DEMO_SUITE} ]]; then mkdir -p ${DEMO_SUITE}; fi && \
+    ln -s /usr/local/cuda/samples/1_Utilities/deviceQuery ${DEMO_SUITE}/deviceQuery
 
-WORKDIR ${HOME}
-
-CMD ["/usr/libexec/s2i/usage"]
+# Set user to 'default'
+USER default
