Fix yum timeout setting. Should be modifying /etc/yum.conf, not /etc/yum/yum.conf. That's a nonexistent file.

--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel7_cuda10
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel7_cuda10
@@ -22,7 +22,7 @@ EXPOSE 8080
 
 # Set timeout for yum (in seconds) to prevent Curl timeout errors w/ yum
 ENV YUM_TIMEOUT=300
-RUN sed -i "/[main]/a timeout=${YUM_TIMEOUT}" /etc/yum/yum.conf
+RUN sed -i "/[main]/a timeout=${YUM_TIMEOUT}" /etc/yum.conf
 
 # Set top directory
 ENV TOPDIR=${HOME}
