For RHEL 7, change python36 installation to python34 since python36 is no longer in the s2i core images.

--- a/TensorFlow/OpenShift/templates/misc/volumes/PersistentVolume_for_ImageNet.yaml
+++ b/TensorFlow/OpenShift/templates/misc/volumes/PersistentVolume_for_ImageNet.yaml
@@ -10,6 +10,6 @@ spec:
   accessModes:
     - "ReadWriteMany"
   awsElasticBlockStore:
-    volumeID: "[REPLACE ME]"
+    volumeID: "vol-001c089055e7cbdbe"
     fsType: "xfs"
   storageClassName: "gp2"
