--- a/TensorFlow/OpenShift/templates/misc/volumes/PersistentVolume_for_nvidia_packages.yaml
+++ b/TensorFlow/OpenShift/templates/misc/volumes/PersistentVolume_for_nvidia_packages.yaml
@@ -10,6 +10,6 @@ spec:
   accessModes:
     - "ReadWriteMany"
   awsElasticBlockStore:
-    volumeID: "[REPLACE ME]"
+    volumeID: "vol-071bdd93e27358376"
     fsType: "xfs"
   storageClassName: "gp2"
