--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel7_cuda10
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel7_cuda10
@@ -55,14 +55,15 @@ COPY TensorFlow/playbooks/cudnn_installation ${CUDNN_INSTALLATION}
 # Put on port 8080
 EXPOSE 8080
 
-# Install Ansible, git, pip3, and Python 3.4
+# Install Ansible, git, pip34, and Python 3.4. Then symlink /usr/bin/pip34 to /usr/bin/pip3
 RUN yum -y install yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm && \
     yum -y install ansible \
                    git \
                    python34 \
                    python34-devel \
                    python34-pip && \
-    rm -rf /var/cache/yum/*
+    rm -rf /var/cache/yum/* && \
+    ln -s /usr/bin/pip3 /usr/bin/pip34
 
 # Install FFTW + TensorFlow prerequisites via Ansible and pip3
 RUN cd ${FFTW_PREREQS_PLAYBOOK} && \
